syntax = "proto3";

// some core imports for aelf chain types
import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "LatchBox.Contracts.VestingTokenVaultContract";

// the contract definition: a gRPC service definition.
service VestingTokenVaultContract {

    // the full name of the C# class that will contain the state (here <namespace>.<state-class-name> format).
    option (aelf.csharp_state) = "LatchBox.Contracts.VestingTokenVaultContract.VestingTokenVaultContractState";
    
    rpc Initialize (google.protobuf.Empty) returns (google.protobuf.Empty) { }
    rpc AddVesting (AddVestingInput) returns (google.protobuf.Empty) { }
    rpc ClaimVesting (ClaimVestingInput) returns (google.protobuf.Empty) { }
    rpc RevokeVesting (RevokeVestingInput) returns (google.protobuf.Empty) { }
    rpc ClaimRefund (ClaimRefundInput) returns (google.protobuf.Empty) { }

}

message AddVestingInput {
    string token_symbol = 1;
    int64 total_amount = 2;
    bool is_revocable = 3;
    repeated AddVestingPeriodInput periods = 4;
}

message AddVestingPeriodInput {
    string name = 1;
    int64 total_amount = 2;
    google.protobuf.Timestamp unlock_time = 3;
    repeated AddVestingReceiverInput receivers = 4;
}

message AddVestingReceiverInput {
    string name = 1;
    aelf.Address address = 2;
    int64 amount = 3;
}

message ClaimVestingInput {
    int64 vesting_id = 1;
    int64 period_id = 2;
}

message RevokeVestingInput {
    int64 vesting_id = 1;
}

message ClaimRefundInput {
    string token_symbol = 1 ;
}

message Vesting {
    int64 vesting_id = 1;
    string token_symbol = 2;
    aelf.Address initiator = 3;
    google.protobuf.Timestamp creation_time = 4;
    bool is_revocable = 5;
    bool is_revoked = 6;
    bool is_active = 7;
}

message VestingPeriod {
    int64 period_id = 1;
    string name = 2;
    int64 total_amount = 3;
    google.protobuf.Timestamp unlock_time = 4;
}

message VestingReceiver {
    string name = 1;
    aelf.Address address = 2;
    int64 amount = 3;
    google.protobuf.Timestamp date_claimed = 4;
    google.protobuf.Timestamp date_revoked = 5;
}

message Refund {
    string token_symbol = 1;
    int64 amount = 2;
}

message RefundList {
    repeated Refund refunds = 1;
}

message VestingPeriodIdList {
    repeated int64 period_ids = 1;
}

message VestingReceiverAddressList {
    repeated aelf.Address receivers = 1;
}

message VestingIdList {
    repeated int64 ids = 1;
}

message VestingReceiverPeriod {
    int64 vesting_id = 1;
    int64 period_id = 2;
}

message VestingReceiverPeriodList {
    repeated VestingReceiverPeriod list = 1;
}

message OnCreatedVestingEvent {
    option (aelf.is_event) = true;
    int64 vesting_id = 1;
}

message OnClaimedVestingEvent {
    option (aelf.is_event) = true;
    int64 vesting_id = 1;
    int64 period_id = 2;
    aelf.Address receiver = 3;
    int64 claimed_amount = 4;
}

message OnRevokedVestingEvent {
    option (aelf.is_event) = true;
    int64 vesting_id = 1;
    int64 unlocked_amount = 2;
}

message OnClaimedRefundEvent {
    option (aelf.is_event) = true;
    aelf.Address recipient = 1;
    string token_symbol = 2;
    int64 refunded_amount = 3;
}